Jumbotrons and bug squashing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -376,8 +376,9 @@
 
 .custom-navbar-bg {
   background-color: 428bca;
-
+}
 .scroll-div{
+  max-height: 80vh;
   overflow: scroll;
 
 }
